@@ -473,6 +473,8 @@ namespace Marvel {
 		ADD_PYTHON_FUNCTION(configure_item)
 
 		// app interface
+		ADD_PYTHON_FUNCTION(add_texture)
+		ADD_PYTHON_FUNCTION(decrement_texture)
 		ADD_PYTHON_FUNCTION(add_character_remap)
 		ADD_PYTHON_FUNCTION(set_primary_window)
 		ADD_PYTHON_FUNCTION(set_accelerator_callback)
